# watcher

./: .gitignore  .make-release-support  CHANGELOG.md  Cargo.toml  Makefile  README.md  deploy.env
config/: development.toml  production.toml  testing.toml
docker/: Dockerfile  entrypoint.sh
src/: error.rs  lib.rs  main.rs  server.rs  settings.rs  test.rs  utils.rs  watcher.rs
src/api/: model.rs
src/state/: mod.rs  state.rs
