[package]
name = "watcher"
version = "0.3.0"
authors = ["crocme10 <matt@area403.org>"]
edition = "2018"
description = "Monitors directory and updates documents database"
license = "AGPLv3"
readme = "README.md"
repository = "https://github.com/crome10/watcher.git"
keywords = [ "document" ]
categories = [ "application" ]

[dependencies]
async-trait = "0.1.36"
chrono = { version = "0.4", features = [ "serde" ] }
clap = "2.33.1"
config = "0.10"
futures = { version = "0.3" }
inotify = "0.8"
reqwest = { version = "0.10.7", features = [ "blocking" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_yaml = "0.8.13"
slog = "2.5"
slog-term = "2.5"
slog-async = "2.5"
snafu = { version = "0.6", features = [ "futures" ] }
tokio = { version = "0.2.22", features = [ "sync", "rt-core", "macros", "stream", "process" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.1"

[lib]
name = "watcher"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/main.rs"
